// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonEditorScriptEntry template generates correct template with entry editorScript file for OOI components 1`] = `
"
  var editorScriptEntry = require('project/src/editor.app.ts');

  var editorReady = editorScriptEntry.editorReady;

  

  
  var editorReadyWrapper = require('yoshi-flow-editor-runtime/build/editorScript.js').editorReadyWrapper;
  var sentry = null;

  var experimentsConfig = {
    scope: 'test-scope'
  };

  if (editorScriptEntry.editorReady) {
    editorReady = editorReadyWrapper(editorScriptEntry.editorReady, sentry, experimentsConfig, 'some-app');
  }
  

  module.exports = editorScriptEntry.default || {
    ...editorScriptEntry,
    editorReady,
  };
"
`;

exports[`CommonEditorScriptEntry template generates correct template with entry editorScript file for OOI components using sentry 1`] = `
"
  var editorScriptEntry = require('project/src/editor.app.ts');

  var editorReady = editorScriptEntry.editorReady;

  

  
  var editorReadyWrapper = require('yoshi-flow-editor-runtime/build/editorScript.js').editorReadyWrapper;
  var sentry = {
    DSN: 'kkk',
    id: '1',
    projectName: 'some-project',
    teamName: 'some-team',
  };

  var experimentsConfig = null;

  if (editorScriptEntry.editorReady) {
    editorReady = editorReadyWrapper(editorScriptEntry.editorReady, sentry, experimentsConfig, 'some-app');
  }
  

  module.exports = editorScriptEntry.default || {
    ...editorScriptEntry,
    editorReady,
  };
"
`;

exports[`CommonEditorScriptEntry template generates correct template with entry editorScript file for app builder components 1`] = `
"
  var editorScriptEntry = require('project/src/editor.app.ts');

  var editorReady = editorScriptEntry.editorReady;

  
  var editorScriptBuilder = require('@wix/bob-widget-services').editorScriptBuilder;

  var builder = editorScriptBuilder();
  if (editorScriptEntry.editorReady) {
    builder = builder.withEditorReady(editorScriptEntry.editorReady);
  }
  if (editorScriptEntry.appManifest) {
    builder = builder.withAppManifest(editorScriptEntry.appManifest);
  }
  if (editorScriptEntry.eventHandler) {
    builder = builder.withEventHandler(editorScriptEntry.eventHandler);
  }
  
  var userController_0 = require('project/src/components/a/editor.controller.ts');
  builder = builder.withWidget(userController_0.default || userController_0);
  editorScriptEntry = builder.build();
  

  

  module.exports = editorScriptEntry.default || {
    ...editorScriptEntry,
    editorReady,
  };
"
`;

exports[`CommonEditorScriptEntry template generates correct template with entry editorScript file for multiple app builder components 1`] = `
"
  var editorScriptEntry = require('project/src/editor.app.ts');

  var editorReady = editorScriptEntry.editorReady;

  
  var editorScriptBuilder = require('@wix/bob-widget-services').editorScriptBuilder;

  var builder = editorScriptBuilder();
  if (editorScriptEntry.editorReady) {
    builder = builder.withEditorReady(editorScriptEntry.editorReady);
  }
  if (editorScriptEntry.appManifest) {
    builder = builder.withAppManifest(editorScriptEntry.appManifest);
  }
  if (editorScriptEntry.eventHandler) {
    builder = builder.withEventHandler(editorScriptEntry.eventHandler);
  }
  
  var userController_0 = require('project/src/components/a/editor.controller.ts');
  builder = builder.withWidget(userController_0.default || userController_0);
  
  var userController_1 = require('project/src/components/c/editor.controller.ts');
  builder = builder.withWidget(userController_1.default || userController_1);
  
  var userController_2 = require('project/src/components/d/editor.controller.ts');
  builder = builder.withWidget(userController_2.default || userController_2);
  editorScriptEntry = builder.build();
  

  

  module.exports = editorScriptEntry.default || {
    ...editorScriptEntry,
    editorReady,
  };
"
`;
